ocaml/minocaml7/minParser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | EOF

   5  top_structure : seq_expr
   6                | top_structure_tail

   7  top_structure_tail :
   8                     | structure_item top_structure_tail

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | structure_item use_file_tail

  16  parse_core_type :

  17  parse_expression : seq_expr EOF

  18  parse_pattern : pattern EOF

  19  structure : seq_expr structure_tail
  20            | structure_tail

  21  structure_tail :
  22                 | SEMISEMI structure
  23                 | structure_item structure_tail

  24  structure_item : LET rec_flag let_bindings
  25                 | OPEN mod_longident

  26  seq_expr : expr
  27           | expr SEMI
  28           | expr SEMI seq_expr

  29  expr : simple_expr
  30       | simple_expr simple_labeled_expr_list
  31       | expr_comma_list
  32       | LET rec_flag let_bindings IN seq_expr
  33       | IF seq_expr THEN expr ELSE expr
  34       | IF seq_expr THEN expr
  35       | expr INFIXOP0 expr
  36       | expr INFIXOP1 expr
  37       | expr INFIXOP2 expr
  38       | expr INFIXOP3 expr
  39       | expr INFIXOP4 expr
  40       | expr PLUS expr
  41       | expr PLUSDOT expr
  42       | expr PLUSEQ expr
  43       | expr MINUS expr
  44       | expr MINUSDOT expr
  45       | expr STAR expr
  46       | expr PERCENT expr
  47       | expr EQUAL expr
  48       | expr LESS expr
  49       | expr GREATER expr
  50       | expr OR expr
  51       | expr BARBAR expr
  52       | expr AMPERSAND expr
  53       | expr AMPERAMPER expr
  54       | expr COLONEQUAL expr
  55       | MINUS expr
  56       | MINUSDOT expr
  57       | PLUS expr
  58       | PLUSDOT expr
  59       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
  60       | ASSERT simple_expr

  61  simple_expr : LIDENT
  62              | mod_longident DOT LIDENT
  63              | INT
  64              | STRING
  65              | FLOAT
  66              | constr_longident
  67              | LPAREN seq_expr RPAREN
  68              | simple_expr DOT LPAREN seq_expr RPAREN

  69  simple_labeled_expr_list : labeled_simple_expr
  70                           | simple_labeled_expr_list labeled_simple_expr

  71  labeled_simple_expr : simple_expr

  72  let_bindings : LIDENT fun_binding
  73               | pattern EQUAL seq_expr

  74  fun_binding : EQUAL seq_expr
  75              | simple_pattern fun_binding

  76  expr_comma_list : expr_comma_list COMMA expr
  77                  | expr COMMA expr

  78  pattern : simple_pattern
  79          | pattern_comma_list

  80  simple_pattern : LIDENT
  81                 | UNDERSCORE
  82                 | constr_longident
  83                 | LPAREN pattern RPAREN

  84  pattern_comma_list : pattern_comma_list COMMA pattern
  85                     | pattern COMMA pattern

  86  constr_longident : mod_longident
  87                   | LPAREN RPAREN
  88                   | FALSE
  89                   | TRUE

  90  mod_longident : UIDENT
  91                | mod_longident DOT UIDENT

  92  rec_flag :
  93           | REC

  94  %entry% : '\001' implementation
  95          | '\002' interface
  96          | '\003' toplevel_phrase
  97          | '\004' use_file
  98          | '\005' parse_core_type
  99          | '\006' parse_expression
 100          | '\007' parse_pattern

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	.  error

	%entry%  goto 8


state 1
	%entry% : '\001' . implementation  (94)
	structure_tail : .  (21)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 14
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	OPEN  shift 19
	PLUS  shift 20
	PLUSDOT  shift 21
	SEMISEMI  shift 22
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	EOF  reduce 21

	implementation  goto 26
	structure  goto 27
	seq_expr  goto 28
	structure_item  goto 29
	structure_tail  goto 30
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 2
	%entry% : '\002' . interface  (95)

	EOF  shift 36
	.  error

	interface  goto 37


state 3
	%entry% : '\003' . toplevel_phrase  (96)
	top_structure_tail : .  (7)

	ASSERT  shift 9
	EOF  shift 38
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 14
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	OPEN  shift 19
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	SEMISEMI  reduce 7

	toplevel_phrase  goto 39
	top_structure  goto 40
	seq_expr  goto 41
	top_structure_tail  goto 42
	structure_item  goto 43
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 4
	%entry% : '\004' . use_file  (97)

	ASSERT  shift 9
	EOF  shift 44
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 14
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	OPEN  shift 19
	PLUS  shift 20
	PLUSDOT  shift 21
	SEMISEMI  shift 45
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	use_file  goto 46
	seq_expr  goto 47
	structure_item  goto 48
	use_file_tail  goto 49
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 5
	%entry% : '\005' . parse_core_type  (98)
	parse_core_type : .  (16)

	.  reduce 16

	parse_core_type  goto 50


state 6
	%entry% : '\006' . parse_expression  (99)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	parse_expression  goto 52
	seq_expr  goto 53
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 7
	%entry% : '\007' . parse_pattern  (100)

	FALSE  shift 10
	LIDENT  shift 54
	LPAREN  shift 55
	TRUE  shift 24
	UIDENT  shift 25
	UNDERSCORE  shift 56
	.  error

	parse_pattern  goto 57
	pattern  goto 58
	mod_longident  goto 59
	constr_longident  goto 60
	simple_pattern  goto 61
	pattern_comma_list  goto 62


state 8
	$accept : %entry% . $end  (0)

	$end  accept


state 9
	expr : ASSERT . simple_expr  (60)

	FALSE  shift 10
	FLOAT  shift 11
	INT  shift 13
	LIDENT  shift 15
	LPAREN  shift 16
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	mod_longident  goto 31
	simple_expr  goto 63
	constr_longident  goto 35


state 10
	constr_longident : FALSE .  (88)

	.  reduce 88


state 11
	simple_expr : FLOAT .  (65)

	.  reduce 65


state 12
	expr : IF . seq_expr THEN expr ELSE expr  (33)
	expr : IF . seq_expr THEN expr  (34)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	seq_expr  goto 64
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 13
	simple_expr : INT .  (63)

	.  reduce 63


state 14
	structure_item : LET . rec_flag let_bindings  (24)
	expr : LET . rec_flag let_bindings IN seq_expr  (32)
	rec_flag : .  (92)

	REC  shift 65
	FALSE  reduce 92
	LIDENT  reduce 92
	LPAREN  reduce 92
	TRUE  reduce 92
	UIDENT  reduce 92
	UNDERSCORE  reduce 92

	rec_flag  goto 66


state 15
	simple_expr : LIDENT .  (61)

	.  reduce 61


state 16
	simple_expr : LPAREN . seq_expr RPAREN  (67)
	constr_longident : LPAREN . RPAREN  (87)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	RPAREN  shift 67
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	seq_expr  goto 68
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 17
	expr : MINUS . expr  (55)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	mod_longident  goto 31
	expr  goto 69
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 18
	expr : MINUSDOT . expr  (56)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	mod_longident  goto 31
	expr  goto 70
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 19
	structure_item : OPEN . mod_longident  (25)

	UIDENT  shift 25
	.  error

	mod_longident  goto 71


state 20
	expr : PLUS . expr  (57)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	mod_longident  goto 31
	expr  goto 72
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 21
	expr : PLUSDOT . expr  (58)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	mod_longident  goto 31
	expr  goto 73
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 22
	structure_tail : SEMISEMI . structure  (22)
	structure_tail : .  (21)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 14
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	OPEN  shift 19
	PLUS  shift 20
	PLUSDOT  shift 21
	SEMISEMI  shift 22
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	EOF  reduce 21

	structure  goto 74
	seq_expr  goto 28
	structure_item  goto 29
	structure_tail  goto 30
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 23
	simple_expr : STRING .  (64)

	.  reduce 64


state 24
	constr_longident : TRUE .  (89)

	.  reduce 89


state 25
	mod_longident : UIDENT .  (90)

	.  reduce 90


state 26
	%entry% : '\001' implementation .  (94)

	.  reduce 94


state 27
	implementation : structure . EOF  (1)

	EOF  shift 75
	.  error


state 28
	structure : seq_expr . structure_tail  (19)
	structure_tail : .  (21)

	LET  shift 76
	OPEN  shift 19
	SEMISEMI  shift 22
	EOF  reduce 21

	structure_item  goto 29
	structure_tail  goto 77


state 29
	structure_tail : structure_item . structure_tail  (23)
	structure_tail : .  (21)

	LET  shift 76
	OPEN  shift 19
	SEMISEMI  shift 22
	EOF  reduce 21

	structure_item  goto 29
	structure_tail  goto 78


state 30
	structure : structure_tail .  (20)

	.  reduce 20


state 31
	simple_expr : mod_longident . DOT LIDENT  (62)
	constr_longident : mod_longident .  (86)
	mod_longident : mod_longident . DOT UIDENT  (91)

	DOT  shift 79
	AMPERAMPER  reduce 86
	AMPERSAND  reduce 86
	BARBAR  reduce 86
	COLONEQUAL  reduce 86
	COMMA  reduce 86
	ELSE  reduce 86
	EOF  reduce 86
	EQUAL  reduce 86
	FALSE  reduce 86
	FLOAT  reduce 86
	GREATER  reduce 86
	IN  reduce 86
	INFIXOP0  reduce 86
	INFIXOP1  reduce 86
	INFIXOP2  reduce 86
	INFIXOP3  reduce 86
	INFIXOP4  reduce 86
	INT  reduce 86
	LESS  reduce 86
	LET  reduce 86
	LIDENT  reduce 86
	LPAREN  reduce 86
	MINUS  reduce 86
	MINUSDOT  reduce 86
	OPEN  reduce 86
	OR  reduce 86
	PERCENT  reduce 86
	PLUS  reduce 86
	PLUSDOT  reduce 86
	PLUSEQ  reduce 86
	RPAREN  reduce 86
	SEMI  reduce 86
	SEMISEMI  reduce 86
	STAR  reduce 86
	STRING  reduce 86
	THEN  reduce 86
	TRUE  reduce 86
	UIDENT  reduce 86


state 32
	seq_expr : expr .  (26)
	seq_expr : expr . SEMI  (27)
	seq_expr : expr . SEMI seq_expr  (28)
	expr : expr . INFIXOP0 expr  (35)
	expr : expr . INFIXOP1 expr  (36)
	expr : expr . INFIXOP2 expr  (37)
	expr : expr . INFIXOP3 expr  (38)
	expr : expr . INFIXOP4 expr  (39)
	expr : expr . PLUS expr  (40)
	expr : expr . PLUSDOT expr  (41)
	expr : expr . PLUSEQ expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . MINUSDOT expr  (44)
	expr : expr . STAR expr  (45)
	expr : expr . PERCENT expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . LESS expr  (48)
	expr : expr . GREATER expr  (49)
	expr : expr . OR expr  (50)
	expr : expr . BARBAR expr  (51)
	expr : expr . AMPERSAND expr  (52)
	expr : expr . AMPERAMPER expr  (53)
	expr : expr . COLONEQUAL expr  (54)
	expr_comma_list : expr . COMMA expr  (77)

	AMPERAMPER  shift 80
	AMPERSAND  shift 81
	BARBAR  shift 82
	COLONEQUAL  shift 83
	COMMA  shift 84
	EQUAL  shift 85
	GREATER  shift 86
	INFIXOP0  shift 87
	INFIXOP1  shift 88
	INFIXOP2  shift 89
	INFIXOP3  shift 90
	INFIXOP4  shift 91
	LESS  shift 92
	MINUS  shift 93
	MINUSDOT  shift 94
	OR  shift 95
	PERCENT  shift 96
	PLUS  shift 97
	PLUSDOT  shift 98
	PLUSEQ  shift 99
	SEMI  shift 100
	STAR  shift 101
	ELSE  reduce 26
	EOF  reduce 26
	IN  reduce 26
	LET  reduce 26
	OPEN  reduce 26
	RPAREN  reduce 26
	SEMISEMI  reduce 26
	THEN  reduce 26


state 33
	expr : simple_expr .  (29)
	expr : simple_expr . simple_labeled_expr_list  (30)
	expr : simple_expr . DOT LPAREN seq_expr RPAREN LESSMINUS expr  (59)
	simple_expr : simple_expr . DOT LPAREN seq_expr RPAREN  (68)

	DOT  shift 102
	FALSE  shift 10
	FLOAT  shift 11
	INT  shift 13
	LIDENT  shift 15
	LPAREN  shift 16
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	AMPERAMPER  reduce 29
	AMPERSAND  reduce 29
	BARBAR  reduce 29
	COLONEQUAL  reduce 29
	COMMA  reduce 29
	ELSE  reduce 29
	EOF  reduce 29
	EQUAL  reduce 29
	GREATER  reduce 29
	IN  reduce 29
	INFIXOP0  reduce 29
	INFIXOP1  reduce 29
	INFIXOP2  reduce 29
	INFIXOP3  reduce 29
	INFIXOP4  reduce 29
	LESS  reduce 29
	LET  reduce 29
	MINUS  reduce 29
	MINUSDOT  reduce 29
	OPEN  reduce 29
	OR  reduce 29
	PERCENT  reduce 29
	PLUS  reduce 29
	PLUSDOT  reduce 29
	PLUSEQ  reduce 29
	RPAREN  reduce 29
	SEMI  reduce 29
	SEMISEMI  reduce 29
	STAR  reduce 29
	THEN  reduce 29

	mod_longident  goto 31
	simple_expr  goto 103
	simple_labeled_expr_list  goto 104
	constr_longident  goto 35
	labeled_simple_expr  goto 105


state 34
	expr : expr_comma_list .  (31)
	expr_comma_list : expr_comma_list . COMMA expr  (76)

	COMMA  shift 106
	AMPERAMPER  reduce 31
	AMPERSAND  reduce 31
	BARBAR  reduce 31
	COLONEQUAL  reduce 31
	ELSE  reduce 31
	EOF  reduce 31
	EQUAL  reduce 31
	GREATER  reduce 31
	IN  reduce 31
	INFIXOP0  reduce 31
	INFIXOP1  reduce 31
	INFIXOP2  reduce 31
	INFIXOP3  reduce 31
	INFIXOP4  reduce 31
	LESS  reduce 31
	LET  reduce 31
	MINUS  reduce 31
	MINUSDOT  reduce 31
	OPEN  reduce 31
	OR  reduce 31
	PERCENT  reduce 31
	PLUS  reduce 31
	PLUSDOT  reduce 31
	PLUSEQ  reduce 31
	RPAREN  reduce 31
	SEMI  reduce 31
	SEMISEMI  reduce 31
	STAR  reduce 31
	THEN  reduce 31


state 35
	simple_expr : constr_longident .  (66)

	.  reduce 66


state 36
	interface : EOF .  (2)

	.  reduce 2


state 37
	%entry% : '\002' interface .  (95)

	.  reduce 95


state 38
	toplevel_phrase : EOF .  (4)

	.  reduce 4


state 39
	%entry% : '\003' toplevel_phrase .  (96)

	.  reduce 96


state 40
	toplevel_phrase : top_structure . SEMISEMI  (3)

	SEMISEMI  shift 107
	.  error


state 41
	top_structure : seq_expr .  (5)

	.  reduce 5


state 42
	top_structure : top_structure_tail .  (6)

	.  reduce 6


state 43
	top_structure_tail : structure_item . top_structure_tail  (8)
	top_structure_tail : .  (7)

	LET  shift 76
	OPEN  shift 19
	SEMISEMI  reduce 7

	top_structure_tail  goto 108
	structure_item  goto 43


state 44
	use_file_tail : EOF .  (11)

	.  reduce 11


state 45
	use_file_tail : SEMISEMI . EOF  (12)
	use_file_tail : SEMISEMI . seq_expr use_file_tail  (13)
	use_file_tail : SEMISEMI . structure_item use_file_tail  (14)

	ASSERT  shift 9
	EOF  shift 109
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 14
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	OPEN  shift 19
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	seq_expr  goto 110
	structure_item  goto 111
	mod_longident  goto 31
	expr  goto 32
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35


state 46
	%entry% : '\004' use_file .  (97)

	.  reduce 97


state 47
	use_file : seq_expr . use_file_tail  (10)

	EOF  shift 44
	LET  shift 76
	OPEN  shift 19
	SEMISEMI  shift 45
	.  error

	structure_item  goto 48
	use_file_tail  goto 112


state 48
	use_file_tail : structure_item . use_file_tail  (15)

	EOF  shift 44
	LET  shift 76
	OPEN  shift 19
	SEMISEMI  shift 45
	.  error

	structure_item  goto 48
	use_file_tail  goto 113


state 49
	use_file : use_file_tail .  (9)

	.  reduce 9


state 50
	%entry% : '\005' parse_core_type .  (98)

	.  reduce 98


state 51
	expr : LET . rec_flag let_bindings IN seq_expr  (32)
	rec_flag : .  (92)

	REC  shift 65
	FALSE  reduce 92
	LIDENT  reduce 92
	LPAREN  reduce 92
	TRUE  reduce 92
	UIDENT  reduce 92
	UNDERSCORE  reduce 92

	rec_flag  goto 114


state 52
	%entry% : '\006' parse_expression .  (99)

	.  reduce 99


state 53
	parse_expression : seq_expr . EOF  (17)

	EOF  shift 115
	.  error


state 54
	simple_pattern : LIDENT .  (80)

	.  reduce 80


state 55
	simple_pattern : LPAREN . pattern RPAREN  (83)
	constr_longident : LPAREN . RPAREN  (87)

	FALSE  shift 10
	LIDENT  shift 54
	LPAREN  shift 55
	RPAREN  shift 67
	TRUE  shift 24
	UIDENT  shift 25
	UNDERSCORE  shift 56
	.  error

	pattern  goto 116
	mod_longident  goto 59
	constr_longident  goto 60
	simple_pattern  goto 61
	pattern_comma_list  goto 62


state 56
	simple_pattern : UNDERSCORE .  (81)

	.  reduce 81


state 57
	%entry% : '\007' parse_pattern .  (100)

	.  reduce 100


state 58
	parse_pattern : pattern . EOF  (18)
	pattern_comma_list : pattern . COMMA pattern  (85)

	COMMA  shift 117
	EOF  shift 118
	.  error


state 59
	constr_longident : mod_longident .  (86)
	mod_longident : mod_longident . DOT UIDENT  (91)

	DOT  shift 119
	COMMA  reduce 86
	EOF  reduce 86
	EQUAL  reduce 86
	FALSE  reduce 86
	LIDENT  reduce 86
	LPAREN  reduce 86
	RPAREN  reduce 86
	TRUE  reduce 86
	UIDENT  reduce 86
	UNDERSCORE  reduce 86


state 60
	simple_pattern : constr_longident .  (82)

	.  reduce 82


state 61
	pattern : simple_pattern .  (78)

	.  reduce 78


state 62
	pattern : pattern_comma_list .  (79)
	pattern_comma_list : pattern_comma_list . COMMA pattern  (84)

	COMMA  shift 120
	EOF  reduce 79
	EQUAL  reduce 79
	RPAREN  reduce 79


state 63
	expr : ASSERT simple_expr .  (60)
	simple_expr : simple_expr . DOT LPAREN seq_expr RPAREN  (68)

	DOT  shift 121
	AMPERAMPER  reduce 60
	AMPERSAND  reduce 60
	BARBAR  reduce 60
	COLONEQUAL  reduce 60
	COMMA  reduce 60
	ELSE  reduce 60
	EOF  reduce 60
	EQUAL  reduce 60
	GREATER  reduce 60
	IN  reduce 60
	INFIXOP0  reduce 60
	INFIXOP1  reduce 60
	INFIXOP2  reduce 60
	INFIXOP3  reduce 60
	INFIXOP4  reduce 60
	LESS  reduce 60
	LET  reduce 60
	MINUS  reduce 60
	MINUSDOT  reduce 60
	OPEN  reduce 60
	OR  reduce 60
	PERCENT  reduce 60
	PLUS  reduce 60
	PLUSDOT  reduce 60
	PLUSEQ  reduce 60
	RPAREN  reduce 60
	SEMI  reduce 60
	SEMISEMI  reduce 60
	STAR  reduce 60
	THEN  reduce 60


state 64
	expr : IF seq_expr . THEN expr ELSE expr  (33)
	expr : IF seq_expr . THEN expr  (34)

	THEN  shift 122
	.  error


state 65
	rec_flag : REC .  (93)

	.  reduce 93


state 66
	structure_item : LET rec_flag . let_bindings  (24)
	expr : LET rec_flag . let_bindings IN seq_expr  (32)

	FALSE  shift 10
	LIDENT  shift 123
	LPAREN  shift 55
	TRUE  shift 24
	UIDENT  shift 25
	UNDERSCORE  shift 56
	.  error

	pattern  goto 124
	let_bindings  goto 125
	mod_longident  goto 59
	constr_longident  goto 60
	simple_pattern  goto 61
	pattern_comma_list  goto 62


state 67
	constr_longident : LPAREN RPAREN .  (87)

	.  reduce 87


state 68
	simple_expr : LPAREN seq_expr . RPAREN  (67)

	RPAREN  shift 126
	.  error


state 69
	expr : expr . INFIXOP0 expr  (35)
	expr : expr . INFIXOP1 expr  (36)
	expr : expr . INFIXOP2 expr  (37)
	expr : expr . INFIXOP3 expr  (38)
	expr : expr . INFIXOP4 expr  (39)
	expr : expr . PLUS expr  (40)
	expr : expr . PLUSDOT expr  (41)
	expr : expr . PLUSEQ expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . MINUSDOT expr  (44)
	expr : expr . STAR expr  (45)
	expr : expr . PERCENT expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . LESS expr  (48)
	expr : expr . GREATER expr  (49)
	expr : expr . OR expr  (50)
	expr : expr . BARBAR expr  (51)
	expr : expr . AMPERSAND expr  (52)
	expr : expr . AMPERAMPER expr  (53)
	expr : expr . COLONEQUAL expr  (54)
	expr : MINUS expr .  (55)
	expr_comma_list : expr . COMMA expr  (77)

	.  reduce 55


state 70
	expr : expr . INFIXOP0 expr  (35)
	expr : expr . INFIXOP1 expr  (36)
	expr : expr . INFIXOP2 expr  (37)
	expr : expr . INFIXOP3 expr  (38)
	expr : expr . INFIXOP4 expr  (39)
	expr : expr . PLUS expr  (40)
	expr : expr . PLUSDOT expr  (41)
	expr : expr . PLUSEQ expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . MINUSDOT expr  (44)
	expr : expr . STAR expr  (45)
	expr : expr . PERCENT expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . LESS expr  (48)
	expr : expr . GREATER expr  (49)
	expr : expr . OR expr  (50)
	expr : expr . BARBAR expr  (51)
	expr : expr . AMPERSAND expr  (52)
	expr : expr . AMPERAMPER expr  (53)
	expr : expr . COLONEQUAL expr  (54)
	expr : MINUSDOT expr .  (56)
	expr_comma_list : expr . COMMA expr  (77)

	.  reduce 56


state 71
	structure_item : OPEN mod_longident .  (25)
	mod_longident : mod_longident . DOT UIDENT  (91)

	DOT  shift 119
	EOF  reduce 25
	LET  reduce 25
	OPEN  reduce 25
	SEMISEMI  reduce 25


state 72
	expr : expr . INFIXOP0 expr  (35)
	expr : expr . INFIXOP1 expr  (36)
	expr : expr . INFIXOP2 expr  (37)
	expr : expr . INFIXOP3 expr  (38)
	expr : expr . INFIXOP4 expr  (39)
	expr : expr . PLUS expr  (40)
	expr : expr . PLUSDOT expr  (41)
	expr : expr . PLUSEQ expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . MINUSDOT expr  (44)
	expr : expr . STAR expr  (45)
	expr : expr . PERCENT expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . LESS expr  (48)
	expr : expr . GREATER expr  (49)
	expr : expr . OR expr  (50)
	expr : expr . BARBAR expr  (51)
	expr : expr . AMPERSAND expr  (52)
	expr : expr . AMPERAMPER expr  (53)
	expr : expr . COLONEQUAL expr  (54)
	expr : PLUS expr .  (57)
	expr_comma_list : expr . COMMA expr  (77)

	.  reduce 57


state 73
	expr : expr . INFIXOP0 expr  (35)
	expr : expr . INFIXOP1 expr  (36)
	expr : expr . INFIXOP2 expr  (37)
	expr : expr . INFIXOP3 expr  (38)
	expr : expr . INFIXOP4 expr  (39)
	expr : expr . PLUS expr  (40)
	expr : expr . PLUSDOT expr  (41)
	expr : expr . PLUSEQ expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . MINUSDOT expr  (44)
	expr : expr . STAR expr  (45)
	expr : expr . PERCENT expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . LESS expr  (48)
	expr : expr . GREATER expr  (49)
	expr : expr . OR expr  (50)
	expr : expr . BARBAR expr  (51)
	expr : expr . AMPERSAND expr  (52)
	expr : expr . AMPERAMPER expr  (53)
	expr : expr . COLONEQUAL expr  (54)
	expr : PLUSDOT expr .  (58)
	expr_comma_list : expr . COMMA expr  (77)

	.  reduce 58


state 74
	structure_tail : SEMISEMI structure .  (22)

	.  reduce 22


state 75
	implementation : structure EOF .  (1)

	.  reduce 1


state 76
	structure_item : LET . rec_flag let_bindings  (24)
	rec_flag : .  (92)

	REC  shift 65
	FALSE  reduce 92
	LIDENT  reduce 92
	LPAREN  reduce 92
	TRUE  reduce 92
	UIDENT  reduce 92
	UNDERSCORE  reduce 92

	rec_flag  goto 127


state 77
	structure : seq_expr structure_tail .  (19)

	.  reduce 19


state 78
	structure_tail : structure_item structure_tail .  (23)

	.  reduce 23


state 79
	simple_expr : mod_longident DOT . LIDENT  (62)
	mod_longident : mod_longident DOT . UIDENT  (91)

	LIDENT  shift 128
	UIDENT  shift 129
	.  error


state 80
	expr : expr AMPERAMPER . expr  (53)

	ASSERT  shift 9
	FALSE  shift 10
	FLOAT  shift 11
	IF  shift 12
	INT  shift 13
	LET  shift 51
	LIDENT  shift 15
	LPAREN  shift 16
	MINUS  shift 17
	MINUSDOT  shift 18
	PLUS  shift 20
	PLUSDOT  shift 21
	STRING  shift 23
	TRUE  shift 24
	UIDENT  shift 25
	.  error

	mod_longident  goto 31
	expr  goto 130
	simple_expr  goto 33
	expr_comma_list  goto 34
	constr_longident  goto 35

